Correctly Aligned the Image

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2995,16 +2995,16 @@ input, select, textarea {
 
 		.spotlight .image {
 			display: inline-block;
-			margin-left: 4em;
+			/* margin-left: 4em; */
 			padding: 0.65em;
 			border-radius: 100%;
-			border: solid 1px;
+			border: solid 4px;
 		}
 
 			.spotlight .image img {
 				display: block;
 				border-radius: 100%;
-				width: 16em;
+				width: 18em;
 			}
 
 		@media screen and (max-width: 980px) {
@@ -3056,7 +3056,7 @@ input, select, textarea {
 			}
 
 				.spotlight .image img {
-					width: 12em;
+					width: 14em;
 				}
 
 		}
